FB: Use valueOf instead of the constructor for Integer/Long
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@10815 7fc7bbf3-cf45-46d4-be06-341739edd864